--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -1,41 +1,48 @@
-YOUR NAME Lab 1: Intro to HTML
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ZEHRA PATWARY Lab 1: Intro to HTML</title>
+</head>
+<body>
+  <h1>ZEHRA PATWARY Lab 1: Intro to HTML</h1>
+  <h2>First, the basics.</h2>
+  <p>You need the following to build your website.</p>
+  <ul>
+      <li>HTML and CSS</li>
+      <li>Javascript</li>
+      <li>Node.js</li>
+      <li>And other web development frameworks</li>
+  </ul>
+  <p>You should list your top 3 goals for the class below.</p>
+  <ol>
+    <li>Learn front-end web design</li>
+    <li>Learn new programming languages</li>
+    <li>Learn how to work with others in a technical space</li>
+    <li>Learn popular web dev frameworks</li>
+</ol>
+<h3>Let's Try Some Inline Elements</h3>
+<p>Sometimes you want to <em>draw attention to something</em> in a line of text.</p>
 
-First, the basics.
+<p>Sometimes you want to <strong>strongly emphasize something</strong> in the text.</p>
 
-You need the following to build your website.
+<p>Sometimes you want to<em><strong> do both</strong></em>.</p>
+<h3>Empty Elements</h3>
 
-HTML and CSS
-Javascript
-Node.js
-And other web development frameworks
-
-You should list your top 3 goals for the class below.
-
-Learn front-end web design
-Learn new programming languages
-Learn how to work with others in a technical space
-Learn popular web dev frameworks
-
-Let's Try Some Inline Elements
-
-Sometimes you want to draw attention to something in a line of text.
-
-Sometimes you want to strongly emphasize something in the text.
-
-Sometimes you want to do both.
-
-Empty Elements
-
-Soft line breaks can't wrap anything. Neither can image tags, or hard lines.
-Add a hard line under here, and make sure you've used some soft line breaks to match your page to the sample.
-
-Images 
-Don't forget to use alt text on your images. It's important for accessibility.
-
-onigiri_1
-onigiri_2
-onigiri_3
-onigiri_4
-
-Include a hyperlink here to your github repository for class.
-If you want your repo to be private, be sure to invite Prof A as a "collaborator."
+<p>Soft line breaks can't wrap anything.<br>Neither can image tags, or hard lines.</br>
+Add a hard line under here, and make sure you've used some soft line breaks to match your page to the sample.</p>
+<hr>
+<h3>Images</h3>
+<p>Include the four images from the links and images tutorial below.</p>
+<p>Don't forget to use alt text on your images. It's important for accessibility.</p>
+<img alt = "onigiri_1" src='images/onigiri_1.png'/>
+<img alt = "onigiri_2" src='images/onigiri_2.png'/>
+<img alt = "onigiri_3" src='images/onigiri_3.png' width = '75'/>
+<img alt = "onigiri_4" src='images/onigiri_4.png'/>
+<hr>
+<a href = "https://github.com/ZehraPatwary1/INST377-Lab-Work">Include a hyperlink here to your github repository for class.</a>
+<p>If you want your repo to be private, be sure to invite Prof A as a "collaborator."</p>
+</body>
+</html>
