--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -16,12 +16,13 @@
       <li>Node.js</li>
       <li>And other web development frameworks</li>
   </ul>
-  <p>You should list your top 3 goals for the class below.</p>
+  <p>You should list your top 5 albums below.</p>
   <ol>
-    <li>Learn front-end web design</li>
-    <li>Learn new programming languages</li>
-    <li>Learn how to work with others in a technical space</li>
-    <li>Learn popular web dev frameworks</li>
+    <li>Montero</li>
+    <li>Justice</li>
+    <li>Dawn FM</li>
+    <li>=</li>
+    <li>30</li>
 </ol>
 <h3>Let's Try Some Inline Elements</h3>
 <p>Sometimes you want to <em>draw attention to something</em> in a line of text.</p>
