--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -41,8 +41,8 @@ Add a hard line under here, and make sure you've used some soft line breaks to m
 <img alt = "onigiri_1" src='images/onigiri_1.jpg'/>
 <img alt = "onigiri_2" src='images/onigiri_2.png'/>
 <img alt = "onigiri_3" src='images/onigiri_3.gif' width = '75'/>
+<img alt = "onigiri_4" src='images/onigiri_4.svg'/>
 
-<img alt="onigiri_4 (gif)" src="onigiri.gif" />
 <hr>
 <a href = "https://github.com/ZehraPatwary1/INST377-Lab-Work">Include a hyperlink here to your github repository for class.</a>
 <p>If you want your repo to be private, be sure to invite Prof A as a "collaborator."</p>
