added images lab 1

--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -38,7 +38,7 @@ Add a hard line under here, and make sure you've used some soft line breaks to m
 <h3>Images</h3>
 <p>Include the four images from the links and images tutorial below.</p>
 <p>Don't forget to use alt text on your images. It's important for accessibility.</p>
-<img alt = "onigiri_1" src='images/onigiri.png'/>
+<img alt = "onigiri_1" src='images/onigiri_1.png'/>
 <img alt = "onigiri_2" src='images/onigiri_2.png'/>
 <img alt = "onigiri_3" src='images/onigiri_3.png' width = '75'/>
 <img alt = "onigiri_4" src='images/onigiri_4.png'/>
