--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -38,10 +38,11 @@ Add a hard line under here, and make sure you've used some soft line breaks to m
 <h3>Images</h3>
 <p>Include the four images from the links and images tutorial below.</p>
 <p>Don't forget to use alt text on your images. It's important for accessibility.</p>
-<img alt = "mochi (gif)" src='images/mochi.gif'/>
 <img alt = "mochi (jpg)" src='images/mochi.jpg'/>
-<img alt = "mochi (png)" src='images/mochi.png' width = '75'/>
+<img alt = "mochi (gif)" src='images/mochi.gif'/>
 <img alt = "mochi (svg)" src='images/mochi.svg'/>
+<img alt = "mochi (png)" src='images/mochi.png'/>
+
 
 <hr>
 <a href = "https://github.com/ZehraPatwary1/INST377-Lab-Work">Include a hyperlink here to your github repository for class.</a>
