--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -1,45 +1,84 @@
-YOUR NAME Lab 2: CSS Selectors
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ZEHRA PATWARY Lab 2: CSS Selectors</title>
+    <link rel='stylesheet' href='styles.css'/>
+</head>
+<body class='wrapper'>
+    <div class='container'>
+      <div class='header'>
+  <h1 class='title'>ZEHRA PATWARY Lab 2: CSS Selectors</h1>
+  </div>
+  <nav>
+      <a href="index.html">Main page</a>
+      <a href="selectors.html">Selectors</a>
+  </nav>
+  
+  <h2 class = 'subtitle'>First, the basics.</h2>
+  <p>You need the following to build your website.</p>
+  <div class = 'section_1'>
+  <ul>
+      <li>HTML and CSS</li>
+      <li>Javascript</li>
+      <li>Node.js</li>
+      <li>And other web development frameworks</li>
+  </ul>
+  
+  <p>You should list your top 5 albums below.</p>
+  <ol>
+    <li>Montero</li>
+    <li>Justice</li>
+    <li>Dawn FM</li>
+    <li>=</li>
+    <li>30</li>
+   </ol>
+</div>
 
-Selectors
-Main Page
+<div class ='section_2'>
+<h3 class = 'subtitle'>Let's Try Some Inline Elements</h3>
+<p>Sometimes you want to <em>draw attention to something</em> in a line of text.</p>
 
-First, the basics.
+<p>Sometimes you want to <strong>strongly emphasize something</strong> in the text.</p>
 
-You need the following to build your website.
+<p>Sometimes you want to<em><strong> do both</strong></em>.</p>
+</div>
 
-HTML and CSS
-Javascript
-Node.js
-And other web development frameworks
+<div class='section_3'>
+<h3>Empty Elements</h3>
 
-You should list your top 3 goals for the class below.
+<p>Soft line breaks can't wrap anything.<br>Neither can image tags, or hard lines.</br>
+Add a hard line under here, and make sure you've used some soft line breaks to match your page to the sample.</p>
+<hr>
+</div>
 
-Learn front-end web design
-Learn new programming languages
-Learn how to work with others in a technical space
-Learn popular web dev frameworks
+<div class='section_4'> 
+    <div class='text'>   
+<h3 class='text'>Images</h3>
+<p>Include the four images from the links and images tutorial below.</p>
+<p>Don't forget to use alt text on your images. It's important for accessibility.</p>
+</div>
 
-Let's Try Some Inline Elements
+<div class='grid'>
+<div class='grid img'>
+<img alt = "mochi (jpg)" src='images/mochi.jpg'/>
+<img alt = "mochi (gif)" src='images/mochi.gif'/>
+<img alt = "mochi (svg)" src='images/mochi.svg'/>
+<img alt = "mochi (png)" src='images/mochi.png'/>
 
-Sometimes you want to draw attention to something in a line of text.
+</div>
+</div>
+</div>
 
-Sometimes you want to strongly emphasize something in the text.
+<div class='footer'>
 
-Sometimes you want to do both.
+<hr>
 
-Empty Elements
-
-Soft line breaks can't wrap anything. Neither can image tags, or hard lines.
-Add a hard line under here, and make sure you've used some soft line breaks to match your page to the sample.
-
-Images 
-Don't forget to use alt text on your images. It's important for accessibility.
-If you build this page right, your images will form a small "carousel"
-
-onigiri_1
-onigiri_2
-onigiri_3
-onigiri_4
-
-Include a hyperlink here to your github repository for class.
-If you want your repo to be private, be sure to invite Prof A as a "collaborator."
+<a href = "https://github.com/ZehraPatwary1/INST377-Lab-Work">Include a hyperlink here to your github repository for class.</a>
+<p>If you want your repo to be private, be sure to invite Prof A as a "collaborator."</p>
+</div>
+</div>
+</body>
+</html>
