--- a/client/lab_4/data.html
+++ b/client/lab_4/data.html
@@ -1,19 +1,24 @@
-YOUR NAME Lab 4: HTML Forms
-
-today's date
-Database Demos
-Main Page
-
-HTML form
-
-text input
-checkbox 1
-checkbox 2
-checkbox 3
-button Submit Form
-
-data display element
-
-footer item 1
-footer item 2
-footer item 3
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lab 4</title>
+    <link rel='stylesheet' href='styles.css'/>
+</head>
+<body>
+    <div class='name'>
+        Zehra Patwary Lab 4: HTML Forms
+    </div>
+    <div class='menu-container'>
+        <div class='menu'>
+          <div class='date'>Feb 16, 2022</div>
+          <div class='signup'>
+              <a href="data.html">Database Demos</a>
+          </div>
+          <div class='login'>
+            <a href="">Main page</a>
+            </div>
+        </div>
+      </div>
