--- a/client/tetris/index.html
+++ b/client/tetris/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js" charset="utf-8"></script>
-    <link rel ="stylesheet" href="styles.css"></link>
-    <title>Basic Tetris</title>
+    <script src="script.js" charset = "utf-8"></script>
+    <link rel="stylesheet" href="style.css"></link>
+    <title>Tetris Game</title>
 </head>
 <body>
 
-    <h3>Score:<span id ="score">0</span></h3>
+    <h3>Score:<span id="score">0</span></h3>
     <button id="start-button">Start/Pause</button>
 
-    <div class = "container">
+    <div class="container">
     <div class="grid">
+        <div></div> 
         <div></div>
         <div></div>
         <div></div>
@@ -22,10 +23,7 @@
         <div></div>
         <div></div>
         <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div></div> 
         <div></div>
         <div></div>
         <div></div>
@@ -225,30 +223,29 @@
         <div class="taken"></div>
         <div class="taken"></div>
         <div class="taken"></div>
-      </div>
+        </div>
 
 
-      <div class="mini-grid">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-
-
+        <div class="mini-grid">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
     </div>
 
-  </body>
+
+</body>
 </html>
