added larger button

--- a/client/lab_5/index.html
+++ b/client/lab_5/index.html
@@ -37,8 +37,8 @@
                     No
                 </label>
                 </div>
-                <div class="submit">
-                    <input type="submit" value="Submit">
+                <button class="button">Submit</button>
+                
             </div>
             
         </form>
