added center block

--- a/client/lab_5/index.html
+++ b/client/lab_5/index.html
@@ -11,18 +11,18 @@
 <body>
     <h1 class="title">Zehra Patwary's Lab 5</h1>
     <div class="container">
-        <form action="https://data.princegeorgescountymd.gov/resource/umjn-t2iz.json" method='get' class='form-test'>
+        <form action="https://data.princegeorgescountymd.gov/resource/umjn-t2iz.json" method='get' class='form'>
             <div class="field">
                 <label class="label">First Name</label>
                 <div class="control">
-                    <input class="input" type="text" name="first_name">
+                    <input class="input" type="text" name="first-name">
                 </div>
             </div>
 
             <div class="field">
                 <label class="label">Food Preference</label>
                 <div class="control">
-                    <input class="input" type="text" name="food_pref">
+                    <input class="input" type="text" name="food-pref">
                 </div>
             </div>
 
