--- a/client/lab_6/index.html
+++ b/client/lab_6/index.html
@@ -42,8 +42,9 @@
         </form>
             </div>
     
-        <div class="col is-two-thirds">
-            <div id="third_box" class="box"> This is going to be something in two weeks.</div>
+        <div class="page_item">
+            <h2>Restaurant List</h2>
+            <ul class="resto-list"></ul>
         </div>
         </div> 
         </div>
