--- a/client/lab_6/index.html
+++ b/client/lab_6/index.html
@@ -16,7 +16,7 @@
              <div class="columns">
             <div class="column is-narrow">
     
-                <form action="/api/foodServicesPG" method='get' class='form box'>
+                <form id="form" method='get' class='form box'>
                     <div class="field">
                 <label class="label">First Name</label>
                 <div class="control">
