--- a/client/lab_7/index.html
+++ b/client/lab_7/index.html
@@ -36,7 +36,7 @@
                     </form>
                  </div>
                  <div class="page_item">
-                    <h2>Restaurant List</h2>
+                    <h2>Restaurants List</h2>
                     <ul class="resto-list"></ul>
                 </div>
             </div> 
