changed uppercase to lowercase

--- a/client/lab_7/index.html
+++ b/client/lab_7/index.html
@@ -32,7 +32,7 @@
                         <label for='no' class='radio-label'>No</label>
                       </div>
 
-                        <button class="button submit_button" type="submit">Change Restaurants</button> 
+                        <button class="button submit_button" type="submit">Load List</button> 
                     </form>
                  </div>
                  <div class="page_item">
