--- a/client/index.html
+++ b/client/index.html
@@ -59,6 +59,7 @@
                   <li><a href="./lab_8">Lab 8 - Javascript 4: JSON to Lab Markers</a></li>
                   <li><a href="./tetris">JS Tutorial 1 - Tetris</a></li>
                   <li><a href="./doodle">JS Tutorial 2 - Doodle</a></li>
+                  <li><a href="./flappy">JS Tutorial 3 - Flappy Bird</a></li>
                 </ul>
                 <div class="menu-label">Individual Labs for 377</div>
               </aside>
